# xo-umbrella2

./: .clangd  .gitignore  .gitmodules  BACKLOG.md  BUILD.md  CMakeLists.txt  CMakeLists.txt.old  Doxyfile.in  EXAMPLES  EigenUtil.cpp  FAQ  FAQ-DEV.md  FILES  KalmanFilter.cpp  KalmanFilter.hpp  KalmanFilterEngine.cpp  KalmanFilterEngine.hpp  KalmanFilterInput.cpp  KalmanFilterInput.hpp  KalmanFilterInputCallback.hpp  KalmanFilterInputSource.hpp  KalmanFilterInputToConsole.cpp  KalmanFilterInputToConsole.hpp  KalmanFilterObservable.cpp  KalmanFilterObservable.hpp  KalmanFilterOutputCallback.hpp  KalmanFilterSpec.cpp  KalmanFilterSpec.hpp  KalmanFilterState.cpp  KalmanFilterState.hpp  KalmanFilterStateToConsole.cpp  KalmanFilterStateToConsole.hpp  KalmanFilterStep.cpp  KalmanFilterSvc.hpp  KalmanFilterTransition.cpp  KalmanFilterTransition.hpp  README.md  TODO  ci-nxfs.nix  ci.nix  (+11 more)
.xo-callback/: .gitignore  CMakeLists.txt
.xo-callback/cmake/: callbackConfig.cmake.in
.xo-distribution/: CMakeLists.txt
.xo-distribution/utest/: Normal.test.cpp  Uniform.test.cpp
.xo-expression/: CMakeLists.txt  TODO
.xo-expression/utest/: expression_utest_main.cpp  type_unifier.test.cpp
.xo-imgui/: CMakeLists.txt
.xo-pyprintjson/: CMakeLists.txt
.xo-pyunit/: CMakeLists.txt
.xo-ratio/: CMakeLists.txt  README.md
.xo-ratio/docs/: ratio-class.rst
.xo-ratio/example/: CMakeLists.txt
.xo-ratio/utest/: CMakeLists.txt
.xo-unit/: CMakeLists.txt  README.md  flake.nix
.xo-unit/docs/: bpu-class.rst  bu-store-class.rst  quantity-class.rst  quantity-factoryfunctions.rst  quantity-source-code.rst  scaled-unit-constants.rst  xquantity-reference.rst
.xo-unit/pkgs/: xo-randomgen.nix  xo-subsys.nix
.xo-unit/utest/: CMakeLists.txt  natural_unit.test.cpp  unit_utest_main.cpp
.xo-websock/utest/: CMakeLists.txt
docs/: AAllocator-reference.rst  CMakeLists.txt  DArena-reference.rst  DArenaIterator-reference.rst  Doxyfile.in  IAllocator_Xfer-reference.rst  README  basis-unit-class.rst  basis-unit-constants.rst  basis-unit-reference.rst  bpu-class.rst  bu-store-class.rst  classes.rst  cmpresult-reference.rst  conf.py  development.rst  dimension-enum.rst  examples.rst  flatstring-class.rst  flatstring-functions.rst  glossary.rst  implementation.rst  index.rst  install.rst  internals.rst  lessons.rst  natural-unit-class.rst  quantity-class.rst  quantity-factoryfunctions.rst  quantity-reference.rst  quantity-source-code.rst  quantity-unitvars.rst  ratio-reference.rst  scaled-unit-class.rst  scaled-unit-constants.rst  scaled-unit-reference.rst  ubuntu-github-workflow.rst  unit-concept.rst  unit-quantities.rst  unit-reference.rst  (+3 more)
src/: CMakeLists.txt  Displayable.cpp  Refcounted.cpp
src/alloc/: CMakeLists.txt
src/alloc2/: AAllocator.cpp  AllocError.cpp  AllocInfo.cpp  ArenaConfig.cpp  CMakeLists.txt  CollectorTypeRegistry.cpp  DArena.cpp  DArenaIterator.cpp  DX1Collector.cpp  DX1CollectorIterator.cpp  IAllocIterator_Any.cpp  IAllocIterator_DArenaIterator.cpp  IAllocIterator_DX1CollectorIterator.cpp  IAllocator_Any.cpp  IAllocator_DArena.cpp  IAllocator_DX1Collector.cpp  ICollector_Any.cpp  ICollector_DX1Collector.cpp  IGCObject_Any.cpp  IResourceVisitor_Any.cpp  alloc2_register_facets.cpp  cmpresult.cpp  init_alloc2.cpp
src/arena/: CMakeLists.txt  DArena.cpp  DCircularBuffer.cpp  arena_streambuf.cpp
src/callback/: CMakeLists.txt  CallbackSet.cpp
src/distribution/: CMakeLists.txt  Normal.cpp
src/expression/: Apply.cpp  AssignExpr.cpp  CMakeLists.txt  DefineExpr.cpp  Expression.cpp  GeneralizedExpression.cpp  IfExpr.cpp  Lambda.cpp  LocalEnv.cpp  Variable.cpp
src/gc/: CMakeLists.txt  CollectorTypeRegistry.cpp  DGCObjectStoreVisitor.cpp  DX1Collector.cpp  GCObjectStore.cpp  GCObjectStoreConfig.cpp  IAllocator_DX1Collector.cpp  ICollector_Any.cpp  ICollector_DX1Collector.cpp  IGCObject_Any.cpp  MutationLogConfig.cpp  MutationLogEntry.cpp  MutationLogState.cpp  MutationLogStore.cpp  SetupGc.cpp  init_gc.cpp
src/kalmanfilter/: CMakeLists.txt  EigenUtil.cpp  KalmanFilter.cpp  KalmanFilterEngine.cpp  KalmanFilterInput.cpp  KalmanFilterInputToConsole.cpp  KalmanFilterState.cpp  KalmanFilterStateToConsole.cpp  KalmanFilterStep.cpp  KalmanFilterSvc.cpp
src/object2/: CMakeLists.txt  DArray.cpp  DBoolean.cpp  DDictionary.cpp  DFloat.cpp  DInteger.cpp  DList.cpp  DRuntimeError.cpp  DString.cpp  IGCObject_DArray.cpp  (+18 more)
utest/: .#flatstring_utest_main.cpp  AllocIterator.test.cpp  CMakeLists.txt  Collector.test.cpp  DArena.test.cpp  DArenaHashMap.test.cpp  DArenaIterator.test.cpp  DArenaVector.test.cpp  DArray.test.cpp  DAtomicType.test.cpp  DCircularBuffer.test.cpp  DMockCollector.hpp  DPrimitive.test.cpp  DSimpleRcx.test.cpp  DString.test.cpp  DX1CollectorIterator.test.cpp  GCObjectStore.test.cpp  GcosTestutil.cpp  GcosTestutil.hpp  Generation.test.cpp  IGCObjectVisitor_DMockCollector.cpp  IGCObjectVisitor_DMockCollector.hpp  KalmanFilter.test.cpp  MutationLogStore.test.cpp  Object2.test.cpp  PollingReactor.test.cpp  Printable.test.cpp  Quantity.test.cpp  Quantity2.test.cpp  RealizationSource.test.cpp  ResourceVisitor.test.cpp  Sink.test.cpp  StringOps.test.cpp  StructReflector.test.cpp  StructTdx.test.cpp  TestUtil.cpp  TestUtil.hpp  VectorTdx.test.cpp  VisitReason.test.cpp  X1Collector.test.cpp  (+44 more)
xo-arena/: .gitrepo  CMakeLists.txt
xo-facet/: .gitrepo  CMakeLists.txt  README.md
xo-gc/: .gitrepo  CMakeLists.txt
xo-imgui/: .gitrepo  CMakeLists.txt  TROUBLESHOOTING
xo-indentlog2/: .gitrepo  CMakeLists.txt  README.md
xo-interpreter/: .gitrepo  CMakeLists.txt  README.md
xo-object2/: .gitrepo  CMakeLists.txt  README.md
xo-ordinaltree/: .gitrepo  CMakeLists.txt
xo-printable2/: .gitrepo  CMakeLists.txt  README.md
xo-procedure2/: .gitrepo  CMakeLists.txt  README.md
xo-pykalmanfilter/: .gitrepo  CMakeLists.txt  README.md
xo-reader/: .gitrepo  CMakeLists.txt  README
xo-refcnt/: .gitignore  .gitrepo  CMakeLists.txt
xo-subsys/: .gitignore  .gitrepo  CMakeLists.txt  README.md
xo-symboltable/: CMakeLists.txt
xo-type/: .gitrepo  CMakeLists.txt
xo-webutil/: .gitrepo  CMakeLists.txt
(+2528 files in other folders)
